--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/money": "^0.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "money": "^0.2.0",
     "pg": "^8.13.0",
     "prettier-plugin-organize-imports": "^4.1.0",
     "reflect-metadata": "^0.2.0",
