--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nestjs-expense-tracker",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Jordach Makaya",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -15,12 +15,15 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage --coveragePathIgnorePatterns='/docs/' ",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky"
+    "prepare": "husky",
+    "docs": "npx compodoc -p tsconfig.json -d docs",
+    "serve-docs": "npx compodoc -s -d docs "
   },
   "dependencies": {
+    "@compodoc/compodoc": "^1.1.25",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -53,6 +56,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^9.1.6",
     "jest": "^29.5.0",
+    "jest-junit": "^16.0.0",
+    "jest-sonar-reporter": "^2.0.0",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
     "source-map-support": "^0.5.21",
@@ -63,24 +68,13 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.{js,ts}": [
+      "eslint --cache --fix",
+      "prettier --write",
+      "yarn test --passWithNoTests"
+    ],
+    "!docs/**/*.{js,ts}": [],
+    "!docs/js/**/*.{js,ts}": []
   }
 }
