--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,37 +20,27 @@ jobs:
           echo "DATASOURCE_USERNAME=${{ secrets.DATASOURCE_USERNAME }}"
           echo "DATASOURCE_PASSWORD=${{ secrets.DATASOURCE_PASSWORD }}"
           echo "DATASOURCE_DATABASE=${{ secrets.DATASOURCE_DATABASE }}"
-          # Add more checks as needed
           # APP
           echo "APP_PORT=${{ secrets.APP_PORT }}"
           echo "APP_PREFIX=${{ secrets.APP_PREFIX }}"
-
           # SWAGGER
-           echo "SWAGGER_PATH=${{ secrets.SWAGGER_PATH }}"
-           echo "SWAGGER_DESC=${{ secrets.SWAGGER_DESC }}"
-           echo "SWAGGER_TITLE=${{ secrets.SWAGGER_TITLE }}"
-           echo "SWAGGER_LICENCE=${{ secrets.SWAGGER_LICENCE }}"
-           echo "SWAGGER_LICENCE_URL=${{ secrets.SWAGGER_LICENCE_URL }}"
-           echo "SWAGGER_SERV=${{ secrets.SWAGGER_SERV }}"
-           echo "SWAGGER_VERSION=${{ secrets.SWAGGER_VERSION }}"
-        env:
-          DATASOURCE_HOST: ${{ secrets.env_POSTGRES_HOST }}
-          DATASOURCE_USERNAME: ${{ secrets.DATASOURCE_USERNAME }}
-          DATASOURCE_PASSWORD: ${{ secrets.DATASOURCE_PASSWORD }}
-          DATASOURCE_DATABASE: ${{ secrets.DATASOURCE_DATABASE }}
-          # Add more environment variables here
-          SWAGGER_PATH: ${{ secrets.SWAGGER_PATH }}
-          echo "SWAGGER_DESC: ${{ secrets.SWAGGER_DESC }}
-          SWAGGER_TITLE: ${{ secrets.SWAGGER_TITLE }}
-          SWAGGER_LICENCE: ${{ secrets.SWAGGER_LICENCE }}
-          SWAGGER_LICENCE_URL: ${{ secrets.SWAGGER_LICENCE_URL }}
-          SWAGGER_SERV: ${{ secrets.SWAGGER_SERV }}
-          SWAGGER_VERSION: ${{ secrets.SWAGGER_VERSION }}
+          echo "SWAGGER_PATH=${{ secrets.SWAGGER_PATH }}"
+          echo "SWAGGER_DESC=${{ secrets.SWAGGER_DESC }}"
+          echo "SWAGGER_TITLE=${{ secrets.SWAGGER_TITLE }}"
+          echo "SWAGGER_LICENCE=${{ secrets.SWAGGER_LICENCE }}"
+          echo "SWAGGER_LICENCE_URL=${{ secrets.SWAGGER_LICENCE_URL }}"
+          echo "SWAGGER_SERV=${{ secrets.SWAGGER_SERV }}"
+          echo "SWAGGER_VERSION=${{ secrets.SWAGGER_VERSION }}"
+          # JWT
+          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}"
+          echo "JWT_TOKEN_AUDIENCE=${{ secrets.JWT_TOKEN_AUDIENCE }}"
+          echo "JWT_TOKEN_ISSUER=${{ secrets.JWT_TOKEN_ISSUER }}"
+          echo "JWT_TOKEN_TTL=${{ secrets.JWT_TOKEN_TTL }}"
 
   build:
     runs-on: ubuntu-latest
     needs: validate-env
-    if : success() # Ensure env variable as loaded
+    if: success() # Ensure env variables are loaded
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -70,7 +60,7 @@ jobs:
         run: yarn run test:e2e
 
       - name: Run test coverage
-        run: yarn run test:cov  # Ensure this command runs tests and generates coverage report
+        run: yarn run test:cov
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -83,7 +73,7 @@ jobs:
 
   sonarcloud:
     runs-on: ubuntu-latest
-    needs: validate-env
+    needs: build
     if: success() # Ensure build is clean
 
     steps:
@@ -94,6 +84,12 @@ jobs:
 
       - name: Install dependencies
         run: yarn install
+
+      - name: Set up Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v2
@@ -127,5 +123,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs
-
-
